# Qt-QrCodeGenerator

./: .clang-format  .gitignore  CMakeLists.txt  Qt-QrCodeGenerator.pri  Qt-QrCodeGenerator.pro  README.md
.github/workflows/: Build.yml
example/: CMakeLists.txt  Example.pro  MainWindow.cpp  MainWindow.h  main.cpp
src/: QrCodeGenerator.cpp  QrCodeGenerator.h
